[tool.poetry]
name = "testlocali"
version = "0.1.0"
description = ""
authors = ["francescomangiaracina <fmangiaracina@cgnal.com>"]
readme = "README.md"
#packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.23.5"
pandas = "2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
